--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
                     <option value="">Back End Developer</option>
                     <option value="">Fullstack Developer</option>
                 </select><br><br>
-                <label for="browser">Choose your browser from the list: </label><input type="text" id="browser" name="browser"><br><br>
+                <label for="browser">Choose your browser from the list:</label>
+                <select name="browser" id="browser">
+                    <option value="chrome">CHROME</option>
+                    <option value="microsoft edge">MICROSOFFT EDGE</option>
+                    <option value="opera">OPERA</option>
+                    <option value="firefox">FIREFOX</option>
+                </select><br><br>
                 <textarea name="" id="" placeholder="Give a brief summary about you" rows="1"></textarea><br><br>
                 <input type="submit" value="submit"> 
             </form>
